[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Eugen <ukupnique@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gsd = "brain_games.games.brain_gsd:main"
brain-progression = "brain_games.games.brain_progression:main"
